--- a/setup/Vagrantfile
+++ b/setup/Vagrantfile
@@ -1,7 +1,7 @@
 ## This is the base Vagrantfile used to create the sdn-coursera box. 
 
 Vagrant.configure("2") do |config|
-  config.vm.box = "ubuntu/trusty64"
+  config.vm.box = "ubuntu/trusty32"
 
   config.vm.provider "virtualbox" do |v|
       v.customize ["modifyvm", :id, "--cpuexecutioncap", "50"]
@@ -19,7 +19,7 @@ Vagrant.configure("2") do |config|
   config.vm.provision :shell, privileged: false, :path => "mininet-setup.sh"
   config.vm.provision :shell, privileged: false, :path => "pox-setup.sh"
   config.vm.provision :shell, privileged: false, :path => "pyretic-setup.sh"
-  config.vm.provision :shell, privileged: false, :path => "cleanup.sh"
+  #config.vm.provision :shell, privileged: false, :path => "cleanup.sh"
 
   ## SSH config
   config.ssh.forward_x11 = true
