Sanit additions to main Vagrant file

--- a/setup/Vagrantfile
+++ b/setup/Vagrantfile
@@ -1,7 +1,8 @@
 ## This is the base Vagrantfile used to create the sdn-coursera box. 
 
 Vagrant.configure("2") do |config|
-  config.vm.box = "ubuntu/trusty32"
+  config.vm.box = "ubuntu/trusty64"
+  #config.vm.box = "ubuntu/trusty32"
 
   config.vm.provider "virtualbox" do |v|
       v.customize ["modifyvm", :id, "--cpuexecutioncap", "50"]
